# fractal-agents-runtime

./: .coverage  .dockerignore  .gitignore  .rules  CONTRIBUTING.md  README.md  coverage.xml  docker-compose.langfuse.yml  docker-compose.semantic-router.yml  docker-compose.yml  flake.nix  lefthook.yml  package.json
.agent/: BUG-A-fix-python-runtime.md  BUG-thread-history-404.md  bug-investigation-message-history-storage.md  bug-report-thread-values-overwrite.md  rag-feature.md  rnutime-assistant-name-bug.md  runtime-bug-report.md  runtime-schema-fix.md
.agent/bugs/: runtime-bug-get-config-outside-context.md  runtime-bug-mcp-tokens-not-forwarded.md  store-get-delete-namespace-mismatch.md
.agent/goals/: scratchpad.md
.agent/research/: music-source-separation-transcription.md
.agent/user-stories/: semantic-router-integration.md
.devops/docker/: Dockerfile  (+8 more)
apps/python/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yml  openapi-spec.json  package.json  pyproject.toml
apps/python/scripts/: generate_openapi.py
apps/python/src/fractal_agent_infra/: __init__.py  store_namespace.py  tracing.py
apps/python/src/fractal_agent_infra/security/: auth.py
apps/python/src/graphs/: __init__.py  configuration.py  llm.py  registry.py
apps/python/src/graphs/react_agent/: __init__.py  agent.py
apps/python/src/graphs/react_agent/rag/: __init__.py  config.py  embeddings.py  retriever.py
apps/python/src/graphs/react_agent/utils/: mcp_interceptors.py  token.py
apps/python/src/graphs/research_agent/: __init__.py  configuration.py  graph.py  models.py  prompts.py  worker.py
apps/python/src/graphs/vertriebsworkflow/: __init__.py  graph.py  models.py  prompts.py  worker_subgraph.py
apps/python/src/infra/: __init__.py  prompts.py  tracing.py
apps/python/src/react_agent/: __init__.py  agent.py
apps/python/src/react_agent/utils/: token.py  tools.py
apps/python/src/react_agent_with_mcp_tools/: agent.py  tracing.py
apps/python/src/react_agent_with_mcp_tools/utils/: mcp_interceptors.py  store_namespace.py  token.py  tools.py
apps/python/src/robyn_server/: CAPABILITIES.md  Dockerfile  README.md  __main__.py  agent.py  agent_sync.py  app.py  auth.py  database.py  postgres_storage.py  storage.py
apps/python/src/robyn_server/a2a/: __init__.py  handlers.py
apps/python/src/robyn_server/crons/: __init__.py  handlers.py  scheduler.py
apps/python/src/robyn_server/helm/robyn-runtime/: Chart.yaml  README.md  values-dev.yaml  values-testing.yaml
apps/python/src/robyn_server/helm/robyn-runtime/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  prometheusrule.yaml  secret.yaml  service.yaml  servicemonitor.yaml
apps/python/src/robyn_server/mcp/: __init__.py  handlers.py
apps/python/src/robyn_server/routes/: __init__.py  a2a.py  assistants.py  crons.py  helpers.py  mcp.py  metrics.py  runs.py  sse.py  store.py  streams.py  threads.py
apps/python/src/robyn_server/tests/: __init__.py  conftest.py  test_a2a.py  test_app.py  test_assistants.py  test_auth.py  test_crons.py  test_database.py  test_mcp.py  test_openapi.py  test_postgres_integration.py  test_runs.py  test_storage.py  test_streams.py  test_threads.py  test_tracing.py
apps/python/src/server/: CAPABILITIES.md  DEPLOYMENT.md  README.md  __init__.py  __main__.py  agent.py  agent_sync.py  app.py  auth.py  config.py  database.py  encryption_service.py  hardware_key_models.py  hardware_key_service.py  models.py  openapi_spec.py  postgres_storage.py  storage.py
apps/python/src/server/a2a/: __init__.py  handlers.py  schemas.py
apps/python/src/server/crons/: __init__.py  handlers.py  scheduler.py  schemas.py
apps/python/src/server/helm/robyn-runtime/: .helmignore  values-prod.yaml  values-staging.yaml  values.yaml
apps/python/src/server/helm/robyn-runtime/templates/: NOTES.txt  pdb.yaml  serviceaccount.yaml
apps/python/src/server/mcp/: __init__.py  handlers.py  schemas.py
apps/python/src/server/routes/: __init__.py  a2a.py  assistants.py  crons.py  hardware_keys.py  mcp.py  metrics.py  runs.py  store.py  streams.py  threads.py
apps/python/src/server/tests/: conftest.py  conftest_routes.py  test_a2a.py  test_agent_sync_unit.py  test_app.py  test_assistants.py  test_auth.py  test_crons.py  test_database.py  test_goal18_bugs.py  test_hardware_key_routes.py  test_mcp.py  test_openapi.py  test_postgres_integration.py  test_postgres_storage_unit.py  test_prompts.py  test_request_logging.py  test_research_agent.py  test_route_handlers.py  test_runs.py  test_storage.py  test_streams.py  test_threads.py  test_token.py  test_tracing.py
apps/python/tests/: __init__.py  test_encryption_service.py  test_encryption_service_async.py  test_hardware_key_models.py  test_hardware_key_service.py  test_hardware_key_service_async.py  test_llm_factory.py  test_normalise_namespace.py  test_placeholder.py  test_vertriebsworkflow.py
apps/python/tests/rag/: test_config.py  test_embeddings.py  test_retriever.py
benchmarks/: README.md
docs/: MULTI_AGENT_CHECKPOINT_ARCHITECTURE.md  NEXTJS_INTEGRATION.md  goal-38-store-api-fix-handoff.md  rag-archive-retrieval.md  semantic-router.md  ux-store-and-crons.md  webapp-integration-guide.md
scripts/: seed_chromadb_test.py
(+253 files in other folders)
