[project]
name = "fractal-agents-runtime"
version = "0.0.0"
description = "Free, self-hostable LangGraph agent runtime with MCP tools, RAG, and A2A protocol"
authors = [
    { name = "l4b4r4b4b4" },
]
requires-python = ">=3.11.0,<3.13"
dependencies = [
    # Graph package (agent definition, MCP utils, RAG tool factory)
    "fractal-graph-react-agent",
    # Shared infrastructure (tracing, auth, store namespace)
    "fractal-agent-infra",
    # Server framework
    "robyn>=0.76.0",
    # Postgres persistence (server-managed pool, checkpointer, store)
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.2.0",
    # Scheduling
    "apscheduler>=3.11.2",
    "croniter>=6.0.0",
    # Deps used directly by robyn_server (not transitively via graph package)
    "langchain-anthropic>=1.3.3",
    "deepagents>=0.3.9",
    "tavily-python>=0.7.20",
    "pydantic>=2.11.0,<3",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["robyn_server*"]
exclude = ["robyn_server.tests*", "robyn_server.helm*"]

[tool.uv.sources]
fractal-graph-react-agent = { path = "../../packages/python/graphs/react_agent", editable = true }
fractal-agent-infra = { path = "../../packages/python/infra/fractal_agent_infra", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/robyn_server/tests"]
norecursedirs = ["archive", ".agent", ".venv", "__pycache__"]

[tool.ruff]
src = ["src"]
exclude = [
    ".agent",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]
